Fixed backround-color on smaller displays. Centered pages.

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -4,15 +4,8 @@
 
 .archive {
   margin-bottom: 2em;
-
-  @include breakpoint($medium) {
-    @include span(12 of 12);
-  }
-
-  @include breakpoint($large) {
-    @include span(10 of 12 last);
-    @include prefix(0.5 of 12);
-  }
+  width: 100%;
+  float: right;
 
   a {
     color: inherit;
