--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -17,11 +17,8 @@
 }
 
 .page {
-  @include breakpoint($large) {
-    @include span(10 of 12 last);
-    @include prefix(0.5 of 12);
-    @include suffix(2 of 12);
-  }
+  width: 100%;
+  float: right;
 
   .page__inner-wrap {
     @include full();
